--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ google_api_python_client==2.80.0
 google_auth_oauthlib==1.0.0
 pandas==1.5.3
 Pillow==9.4.0
-protobuf==4.22.0
+protobuf<4
 python-dotenv==1.0.0
 streamlit==1.19.0
